[gd_scene load_steps=3 format=3 uid="uid://crni38li25kow"]

[ext_resource type="Script" path="res://menus/WaitingMenu.gd" id="1_s6h2i"]
[ext_resource type="Texture2D" uid="uid://0o2pu3av0x6l" path="res://images/copy-to-clipboard.svg" id="2_x14gm"]

[node name="WaitingMenu" type="PanelContainer"]
custom_minimum_size = Vector2(256, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_s6h2i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game created with ID"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
split_offset = 184

[node name="PartyID" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "123456"
horizontal_alignment = 1

[node name="CopyIconContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CopyIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HSplitContainer/CopyIconContainer"]
layout_mode = 2
texture = ExtResource("2_x14gm")
expand_mode = 2
stretch_mode = 4

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Waiting for player 2"
horizontal_alignment = 1

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"
